Added "forgot password" functionality.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://quentinmay.github.io/login-page",
   "name": "busysquirrels",
   "version": "0.1.0",
   "private": true,
@@ -15,7 +14,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "react-scripts build && aws s3 rm s3://testlogin.com/ --recursive && aws s3 cp ./build s3://testlogin.com/ --recursive --acl public-read",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
